# pmpc

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
PMPC.jl/: Manifest.toml  Manifest_1.6.7.toml  Project.toml  README.md
PMPC.jl/pmpcjl/: Makefile  module.cpp  test.py
PMPC.jl/scripts/: build_pmpc_lib.jl  compilation_utils.jl  make_sysimage.py  tools.py  trace_1.6.jl  trace_1.7.jl  trace_1.8.jl  trace_1.9.jl
PMPC.jl/src/: PMPC.jl  c_interface.jl  c_precompile.jl  cone.jl  cone_solver.jl  cone_utils.jl  jump.jl  lqp.jl  lqp_utils.jl  main.jl  osqp.jl  osqp_solver.jl  precompile.jl  qp.jl  qp_utils.jl  socp.jl  types.jl
PMPC.jl/test/: debug.jl  interactive.ipynb  lqp.jl  multi_stage_test.jl  old_test.jl  runtests.jl  sens_test.jl  test.jl
PMPC.jl/versions/: Manifest.toml_1.6  Manifest.toml_1.7  Manifest.toml_1.8  Manifest.toml_1.9  Project.toml_1.8
examples/: custom_cost.ipynb  gpu_solver.ipynb  simple_demo.ipynb  simple_example.ipynb
pmpc/: __init__.py  accelerated.py  import_pmpcjl.py  julia_utils.py  problem_struct.py  remote.py  scp_mpc.py  static_backend.py  utils.py
pmpc/experimental/: __init__.py  convex_solver.py  extra_constraints.py  gpu_solver.py  jax_solver.py  second_order_solvers.py  solver_definitions.py  (+1 more)
scripts/: install_dynamic.py  install_static.py  repair_with_auditwheel.py
tests/: demo_cost_jax.ipynb  dubins_car.py  experimental.ipynb  jax_solver.ipynb  logbarrier_tests.ipynb  pmpcjl_test.py  remote.py  root_testing.ipynb  simple.py  simple_demo.ipynb  test.py
(+13 files in other folders)
